fixed align issue

--- a/sass/_imageboardSection.scss
+++ b/sass/_imageboardSection.scss
@@ -7,7 +7,6 @@
     {
         font-size: 1.5rem;
         background-color: $remove-button-color;
-        margin-left: 16%;
     }
 
     img
